force-app/main/default/objects/Quality_Assessment__c/fields/AssessmentOutcomePassFeedback__c.field-meta.xml
<CustomField>
    <fullName>AssessmentOutcomePassFeedback__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Automated assessment result for outcome Pass with feedback.</description>
    <formula>IF(
AND(
ISPICKVAL(Evaluation_Type__c,&apos;Customer Resolution Assessment&apos;),
ISPICKVAL(Status__c, &apos;Complete&apos;),
AND(
    OR(ISPICKVAL(ID_d_cust_experiencing_vulnerability__c, &apos;Met&apos;),ISPICKVAL(ID_d_cust_experiencing_vulnerability__c, &apos;Not Applicable&apos;)),
    OR(ISPICKVAL(Gave_extra_care_or_met_access_need__c, &apos;Met&apos;),ISPICKVAL(Gave_extra_care_or_met_access_need__c, &apos;Not Applicable&apos;)),
    OR(ISPICKVAL(Hardship_recorded_referred_managed__c, &apos;Met&apos;),ISPICKVAL(Hardship_recorded_referred_managed__c, &apos;Not Applicable&apos;)),
    OR(ISPICKVAL(Calls_disclosed_recording_got_consent__c, &apos;Met&apos;),ISPICKVAL(Calls_disclosed_recording_got_consent__c, &apos;Not Applicable&apos;)),
    OR(ISPICKVAL(Call_authentication_process_followed__c, &apos;Met&apos;),ISPICKVAL(Call_authentication_process_followed__c, &apos;Not Applicable&apos;)),
    OR(ISPICKVAL(If_resolved_w_o_IDR_letter_RG271_71_met__c, &apos;Met&apos;),ISPICKVAL(If_resolved_w_o_IDR_letter_RG271_71_met__c, &apos;Not Applicable&apos;)),
    OR(ISPICKVAL(IDR_delay_notice_decision_appropriate__c, &apos;Met&apos;),ISPICKVAL(IDR_delay_notice_decision_appropriate__c, &apos;Not Applicable&apos;)),
    OR(ISPICKVAL(IDR_response_sent_within_timeframes__c, &apos;Met&apos;),ISPICKVAL(IDR_response_sent_within_timeframes__c, &apos;Not Applicable&apos;)),
    OR(ISPICKVAL(Was_the_outcome_fair_for_the_customer__c, &apos;Met&apos;),ISPICKVAL(Was_the_outcome_fair_for_the_customer__c, &apos;Not Applicable&apos;)),
    OR(ISPICKVAL(Was_implementation_timely__c, &apos;Met&apos;),ISPICKVAL(Was_implementation_timely__c, &apos;Not Applicable&apos;)),
    OR(ISPICKVAL(Didn_t_provide_financial_product_advice__c, &apos;Met&apos;),ISPICKVAL(Didn_t_provide_financial_product_advice__c, &apos;Not Applicable&apos;)),
    OR(ISPICKVAL(Addressed_info_req_s_basic_accts_etc__c, &apos;Met&apos;),ISPICKVAL(Addressed_info_req_s_basic_accts_etc__c, &apos;Not Applicable&apos;))
    ),
OR(
    AND(
    OR(ISPICKVAL(If_resolved_resp_details_resolution__c, &apos;Met&apos;),ISPICKVAL(If_resolved_resp_details_resolution__c, &apos;Not Applicable&apos;)),
    OR(ISPICKVAL(If_declined_does_resp_identify_issues__c, &apos;Met&apos;),ISPICKVAL(If_declined_does_resp_identify_issues__c, &apos;Not Applicable&apos;)),
    OR(ISPICKVAL(Does_response_have_key_findings__c, &apos;Met&apos;),ISPICKVAL(Does_response_have_key_findings__c, &apos;Not Applicable&apos;)),
    OR(ISPICKVAL(Does_response_have_enough_detail__c, &apos;Met&apos;),ISPICKVAL(Does_response_have_enough_detail__c, &apos;Not Applicable&apos;))
    ),
    ISPICKVAL(If_resolved_resp_details_resolution__c, &apos;Not Met (Post IDR Letter)&apos;),
    ISPICKVAL(If_declined_does_resp_identify_issues__c, &apos;Not Met (Post IDR Letter)&apos;),
    ISPICKVAL(Does_response_have_key_findings__c, &apos;Not Met (Post IDR Letter)&apos;),
    ISPICKVAL(Does_response_have_enough_detail__c, &apos;Not Met (Post IDR Letter)&apos;),
    CONTAINS(TEXT(Engaged_with_cust_rep_where_needed__c),&apos;Not Met&apos;),
    CONTAINS(TEXT(Reasonable_investigation_completed__c),&apos;Not Met&apos;),
    CONTAINS(TEXT(Were_risk_events_raised_and_recorded__c),&apos;Not Met&apos;),
    CONTAINS(TEXT(PSI_identified_flagged_where_needed__c),&apos;Not Met&apos;),
    CONTAINS(TEXT(Were_CMOS_fields_accurate__c),&apos;Not Met&apos;),
    CONTAINS(TEXT(Cust_interactions_accurately_recorded__c),&apos;Not Met&apos;),
    CONTAINS(TEXT(Case_notes_clear_and_complete__c),&apos;Not Met&apos;),
    CONTAINS(TEXT(Other_issues_not_addressed__c),&apos;Not Met&apos;)
    )
),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AssessmentOutcomePassFeedback</label>
    <type>Checkbox</type>
</CustomField>