force-app/main/default/objects/Quality_Assessment__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>DIsplays Owner First Name and Owner Last Name</description>
    <formula>HYPERLINK
      ( OwnerId ,  Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to</label>
    <type>Text</type>
</CustomField>