force-app/main/default/objects/Quality_Assessment__c/fields/Business_score__c.field-meta.xml
<CustomField>
    <fullName>Business_score__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Stores Business  score</description>
    <label>BUSINESS  SCORE (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>