force-app/main/default/objects/Quality_Assessment__c/fields/C_Q_Comments_feedback_suggestions__c.field-meta.xml
<CustomField>
    <fullName>C_Q_Comments_feedback_suggestions__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>C&amp;Q Comments/feedback/suggestions</description>
    <encryptionScheme>None</encryptionScheme>
    <label>C&amp;Q comments, feedback and actions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>