force-app/main/default/objects/Quality_Assessment__c/fields/C_Q_Lead_Comments__c.field-meta.xml
<CustomField>
    <fullName>C_Q_Lead_Comments__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>C&amp;Q Lead Comments</description>
    <label>C&amp;Q Lead Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>