force-app/main/default/objects/Quality_Assessment__c/fields/C_Q_Lead_Response__c.field-meta.xml
<CustomField>
    <fullName>C_Q_Lead_Response__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>C&amp;Q Lead Response</description>
    <label>C&amp;Q Lead Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;TM rejects C&amp;Q Team Lead</fullName>
            </value>
            <value>
                <fullName>C&amp;Q Lead provides final outcome&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>