force-app/main/default/objects/Quality_Assessment__c/fields/C_Q_Manager_Response__c.field-meta.xml
<CustomField>
    <fullName>C_Q_Manager_Response__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>C&amp;Q Manager Response</description>
    <label>C&amp;Q Manager Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C&amp;Q Team Lead accepts TM&apos;s view</fullName>
            </value>
            <value>
                <fullName>C&amp;Q Team Lead rejects TM&apos;s view</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>