force-app/main/default/objects/Quality_Assessment__c/fields/C_Q_Specialist__c.field-meta.xml
<CustomField>
    <fullName>C_Q_Specialist__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>stores Assessor details</description>
    <label>C&amp;Q Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Assessments1</relationshipName>
    <type>Lookup</type>
</CustomField>