force-app/main/default/objects/Quality_Assessment__c/fields/Calculated__c.field-meta.xml
<CustomField>
    <fullName>Calculated__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Indicates if assessment outcome fields should be displayed or not based on users action of calculated</description>
    <label>Calculated</label>
    <type>Checkbox</type>
</CustomField>