force-app/main/default/objects/Quality_Assessment__c/fields/Call_authentication_process_followed__c.field-meta.xml
<CustomField>
    <fullName>Call_authentication_process_followed__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Resolution Assessment question 6</description>
    <inlineHelpText>In all our calls, did we identify the caller in line with ANZ’s standard authentication process?</inlineHelpText>
    <label>Call authentication process followed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
            <value>
                <fullName>Not Met (Out of Case Handler’s control)</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>