force-app/main/default/objects/Quality_Assessment__c/fields/Call_details__c.field-meta.xml
<CustomField>
    <fullName>Call_details__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Call details</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Details of all calls reviewed</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>