force-app/main/default/objects/Quality_Assessment__c/fields/Calls_disclosed_recording_got_consent__c.field-meta.xml
<CustomField>
    <fullName>Calls_disclosed_recording_got_consent__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Resolution Assessment question 5</description>
    <inlineHelpText>In all our calls, did we promptly disclose calls may be recorded and did we get the customer’s consent before recording sensitive personal information?</inlineHelpText>
    <label>Calls: disclosed recording, got consent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
            <value>
                <fullName>Not Met (Out of Case Handler’s control)</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>