force-app/main/default/objects/Quality_Assessment__c/fields/Case_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Closure_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Date when assessed case was closed (populate this field in same way how other/existing fields are calculated in QA)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Closure Date</label>
    <type>DateTime</type>
</CustomField>