force-app/main/default/objects/Quality_Assessment__c/fields/Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>stores case manager details</description>
    <label>Case Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Assessments2</relationshipName>
    <type>Lookup</type>
</CustomField>