force-app/main/default/objects/Quality_Assessment__c/fields/Case_Manager_Score__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager_Score__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Stores Case manager score</description>
    <label>CASE MANAGER SCORE (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>