force-app/main/default/objects/Quality_Assessment__c/fields/Case_notes_clear_and_complete__c.field-meta.xml
<CustomField>
    <fullName>Case_notes_clear_and_complete__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Resolution Assessment question 19</description>
    <inlineHelpText>Are there clear case notes that include investigatory evidence, findings, actions taken, outcomes, and consultations with subject matter experts, all supported by a reliable audit trail?</inlineHelpText>
    <label>Case notes clear and complete?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
            <value>
                <fullName>Not Met (Out of Case Handler’s control)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>