force-app/main/default/objects/Quality_Assessment__c/fields/Case_Notes_Comment__c.field-meta.xml
<CustomField>
    <fullName>Case_Notes_Comment__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Comments for the Case Notes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Notes Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>