force-app/main/default/objects/Quality_Assessment__c/fields/Case_Notes_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Case_Notes_Outcome__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Capture the Case Notes Outcome</description>
    <label>Case Notes Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requirements Met</fullName>
            </value>
            <value>
                <fullName>Requirements Not Met (Process only)</fullName>
            </value>
            <value>
                <fullName>Requirements Not Met (Compliance)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>