force-app/main/default/objects/Quality_Assessment__c/fields/Case_records_are_complete_and_accurate__c.field-meta.xml
<CustomField>
    <fullName>Case_records_are_complete_and_accurate__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>SUCCESS MEASURE 10 Q1</description>
    <inlineHelpText>Our case management records are complete and accurately reflect our investigation and interactions with our customer/their representative and our internal and external stakeholders.</inlineHelpText>
    <label>Case records are complete and accurate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not met</fullName>
            </value>
            <value>
                <fullName>Not met (outside CM control)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>