force-app/main/default/objects/Quality_Assessment__c/fields/Clear_actions_for_acceptance_provided__c.field-meta.xml
<CustomField>
    <fullName>Clear_actions_for_acceptance_provided__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Letter Question 7</description>
    <inlineHelpText>Have we provided clear actions for acceptance including due date and what happens if offer is accepted or not?

Does the customer need to send back an email to accept the offer? 

Is it clear to the customer that if they do not accept the offer they have the right to take the matter to AFCA?</inlineHelpText>
    <label>Clear actions for acceptance provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>