force-app/main/default/objects/Quality_Assessment__c/fields/CM_asked_customer_for_resolution_sought__c.field-meta.xml
<CustomField>
    <fullName>CM_asked_customer_for_resolution_sought__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Call Question 6</description>
    <inlineHelpText>Did the CM ask our customer what resolution they were seeking?
Did they ask the customer what they think would be a reasonable resolution? Were they focussed on problem solving?   ‘From your point of view, what would you like as an outcome?’ ‘What was the resolution you were seeking?’ ‘What will resolve these issues for you?’</inlineHelpText>
    <label>CM asked customer for resolution sought</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>