force-app/main/default/objects/Quality_Assessment__c/fields/CM_asked_for_further_information__c.field-meta.xml
<CustomField>
    <fullName>CM_asked_for_further_information__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Call Question 5</description>
    <inlineHelpText>Did the CM ask for any further information to support the investigation and when it is due?

This includes any supporting information such as invoices, contracts, statements etc Did the CM give the customer a due date in line with our ‘request for information’ framework</inlineHelpText>
    <label>CM asked for further information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>