force-app/main/default/objects/Quality_Assessment__c/fields/CM_confirmed_complaint_identified_issue__c.field-meta.xml
<CustomField>
    <fullName>CM_confirmed_complaint_identified_issue__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Call Question 4</description>
    <inlineHelpText>Did the CM confirm what the complaint was about and clearly identify the issues?</inlineHelpText>
    <label>CM confirmed complaint, identified issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>