force-app/main/default/objects/Quality_Assessment__c/fields/CM_proposed_appropriate_resolution__c.field-meta.xml
<CustomField>
    <fullName>CM_proposed_appropriate_resolution__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Call Question 7</description>
    <inlineHelpText>Was the CM able to propose an appropriate resolution?

Did the CM explain the investigation steps taken to resolve the agreed issues of the complaint and why they thought it was fair? Was the financial remedy appropriate? Did the resolution consider any further impact/issue raised by the customer during the call (ie the resolution was not predetermined)</inlineHelpText>
    <label>CM proposed appropriate resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>